The source of calculation of 47 days in 57:6.3 Give credit to Sergey Prokopov who asked a good question which brought this information to light

--- a/tex/intro.tex
+++ b/tex/intro.tex
@@ -42,7 +42,7 @@ the original First Edition (1955) of the Urantia Papers, known at the time as \b
 and made it available on my website in both electronic and printed forms:
 \begin{center}\myurl{http://www.bibles.org.uk/guardian-plates.html}\end{center}
 For deriving the etymology of the words coined by the revelators, I acknowledge the use of the notes by Dr~Chris Halvorson.
-I am grateful to my friends Jim George and Mitch Austin for their helpful suggestions and comments,
+I am grateful to my friends Jim George, Mitch Austin and Sergey Prokopov for their helpful suggestions and comments,
 some of which have been incorporated into the study notes of the present edition.
 I would like to thank Irina Chernova for creating illustrations for this edition.
 For information on the human sources, upon which this Revelation is based, I am indebted almost entirely to the outstanding
