--- a/tex/p057.tex
+++ b/tex/p057.tex
@@ -64,7 +64,7 @@
 \usection{The Solar System Stage --- The Planet\hyp{}Forming Era}
 \vs p057 6:1 Subsequent to the birth of the solar system a period of diminishing solar disgorgement ensued. Decreasingly, for another 500,000 years, the sun continued to pour forth diminishing volumes of matter into surrounding space. But during these early times of erratic orbits, when the surrounding bodies made their nearest approach to the sun, the solar parent was able to recapture a large portion of this meteoric material.
 \vs p057 6:2 \pc The planets nearest the sun were the first to have their revolutions slowed down by tidal friction. Such gravitational influences also contribute to the stabilization of planetary orbits while acting as a brake on the rate of planetary\hyp{}axial revolution, causing a planet to revolve ever slower until axial revolution ceases, leaving one hemisphere of the planet always turned toward the sun or larger body, as is illustrated by the planet Mercury\index{Planets!Mercury} and by the moon, which always turns the same face toward Urantia\index{Planets!Urantia}.
-\vs p057 6:3 When the tidal frictions of the moon and the earth become equalized, the earth will always turn the same hemisphere toward the moon, and the day and month will be analogous --- in length about 47 days. When such stability of orbits is attained, tidal frictions will go into reverse action, no longer driving the moon farther away from the earth but gradually drawing the satellite toward the planet. And then, in that far\hyp{}distant future when the moon approaches to within about 17,700\,km of the earth, the gravity action of the latter will cause the moon to disrupt, and this tidal\hyp{}gravity explosion will shatter the moon into small particles, which may assemble about the world as rings of matter resembling those of Saturn or may be gradually drawn into the earth as meteors.
+\vs p057 6:3 When the tidal frictions of the moon and the earth become equalized, the earth will always turn the same hemisphere toward the moon, and the day and month will be analogous --- in length about 47 days\fnst{Although the primary source of this information is the book \cite{Jeans1}, the author (Sir James Jeans) himself relies on the book \cite{Jeffreys1} by Sir Harold Jeffreys, where this calculation may be found in §14.52 on page 269.}. When such stability of orbits is attained, tidal frictions will go into reverse action, no longer driving the moon farther away from the earth but gradually drawing the satellite toward the planet. And then, in that far\hyp{}distant future when the moon approaches to within about 17,700\,km of the earth, the gravity action of the latter will cause the moon to disrupt, and this tidal\hyp{}gravity explosion will shatter the moon into small particles, which may assemble about the world as rings of matter resembling those of Saturn or may be gradually drawn into the earth as meteors.
 \vs p057 6:4 If space bodies are similar in size and density, collisions may occur. But if two space bodies of similar density are relatively unequal in size, then, if the smaller progressively approaches the larger, the disruption of the smaller body will occur when the radius of its orbit becomes less than 2.5 times the radius of the larger body. Collisions among the giants of space are rare indeed, but these gravity\hyp{}tidal explosions of lesser bodies are quite common.
 \vs p057 6:5 Shooting stars occur in swarms because they are the fragments of larger bodies of matter which have been disrupted by tidal gravity exerted by near\hyp{}by and still larger space bodies. Saturn’s rings are the fragments of a disrupted satellite. One of the moons of Jupiter is now approaching dangerously near the critical zone of tidal disruption and, within a few million years, will either be claimed by the planet or will undergo gravity\hyp{}tidal disruption. The fifth planet\fnst{This planet was named by the Soviet astronomer S.V.~Orlov ``Phaeton'' in 1949. The breakup of Phaeton gave origin to the asteroid belt. In 1950 V.G.~Fesenkov explained disintegration of Phaeton by its close encounter with Jupiter. However, this leaves the question why the orbits of the majority of asteroids are so far from Jupiter. Because of this difficulty V.G.~Fesenkov later rejected his own model. For more information, I refer the reader to the article ``Origin of Asteroids'', by V.A.~Bronshtein (1972) available on \texttt{archive.org} (contributed by NASA).} of the solar system of long, long ago traversed an irregular orbit, periodically making closer and closer approach to Jupiter until it entered the critical zone of gravity\hyp{}tidal disruption, was swiftly fragmentized, and became the present\hyp{}day cluster of asteroids.
 \vs p057 6:6 \pc \bibemph{4,000,000,000} years ago witnessed the organization of the Jupiter\index{Planets!Jupiter|)} and Saturn systems much as observed today except for their moons, which continued to increase in size for several billions of years. In fact, all of the planets and satellites of the solar system are still growing as the result of continued meteoric captures.
@@ -114,3 +114,13 @@
 \vsetoff
 \vs p057 8:27 [Presented by a Life Carrier, a member of the original Urantia Corps and now a resident observer.]
 \quizlink
+\begin{thebibliography}{100}
+\bibitem{Jeans1}
+J.~Jeans.
+{``The Universe Around Us''}
+{\em Cambridge: University Press}, 1930.
+\bibitem{Jeffreys1}
+H.~Jeffreys.
+{``The Earth, Its Origin, History and Physical Constitution''}
+{\em Cambridge: University Press}, 1929.
+\end{thebibliography}
