Expand the note on Amalthea

--- a/tex/p057.tex
+++ b/tex/p057.tex
@@ -66,7 +66,7 @@
 \vs p057 6:2 \pc The planets nearest the sun were the first to have their revolutions slowed down by tidal friction. Such gravitational influences also contribute to the stabilization of planetary orbits while acting as a brake on the rate of planetary\hyp{}axial revolution, causing a planet to revolve ever slower until axial revolution ceases, leaving one hemisphere of the planet always turned toward the sun or larger body, as is illustrated by the planet Mercury\index{Planets!Mercury} and by the moon, which always turns the same face toward Urantia\index{Planets!Urantia}.
 \vs p057 6:3 When the tidal frictions of the moon and the earth become equalized, the earth will always turn the same hemisphere toward the moon, and the day and month will be analogous --- in length about 47 days\fnst{Although the primary source of this information is the book \cite{Jeans1}, the author (Sir James Jeans) himself relies on the book \cite{Jeffreys1} by Sir Harold Jeffreys, where this calculation may be found in §14.52 on page 269.}. When such stability of orbits is attained, tidal frictions will go into reverse action, no longer driving the moon farther away from the earth but gradually drawing the satellite toward the planet. And then, in that far\hyp{}distant future when the moon approaches to within about 17,700\,km of the earth, the gravity action of the latter will cause the moon to disrupt, and this tidal\hyp{}gravity explosion will shatter the moon into small particles, which may assemble about the world as rings of matter resembling those of Saturn or may be gradually drawn into the earth as meteors.
 \vs p057 6:4 If space bodies are similar in size and density, collisions may occur. But if two space bodies of similar density are relatively unequal in size, then, if the smaller progressively approaches the larger, the disruption of the smaller body will occur when the radius of its orbit becomes less than 2.5 times the radius of the larger body. Collisions among the giants of space are rare indeed, but these gravity\hyp{}tidal explosions of lesser bodies are quite common.
-\vs p057 6:5 Shooting stars occur in swarms because they are the fragments of larger bodies of matter which have been disrupted by tidal gravity exerted by near\hyp{}by and still larger space bodies. Saturn’s rings are the fragments of a disrupted satellite. One of the moons of Jupiter\fnst{That is \bibemph{Io,} as the original text (\cite{Jeans1}, p.\,245) specifically says \bibemph{Jupiter's innermost satellite is already perilously near it} and at the time when Sir James Jeans wrote this, the innermost known sattelite was Io.} is now approaching dangerously near the critical zone of tidal disruption and, within a few million years, will either be claimed by the planet or will undergo gravity\hyp{}tidal disruption. The fifth planet\fnst{This planet was named \bibemph{Phaeton} by the Soviet astronomer S.V.~Orlov in 1949. The breakup of Phaeton gave origin to the asteroid belt. In 1950 V.G.~Fesenkov explained disintegration of Phaeton by its close encounter with Jupiter. However, this leaves the question why the orbits of the majority of asteroids are so far from Jupiter. Because of this difficulty V.G.~Fesenkov later rejected his own original model. For more information, I refer the reader to the article ``Origin of Asteroids'', by V.A.~Bronshtein (1972) available on \texttt{archive.org} (contributed by NASA).} of the solar system of long, long ago traversed an irregular orbit, periodically making closer and closer approach to Jupiter until it entered the critical zone of gravity\hyp{}tidal disruption, was swiftly fragmentized, and became the present\hyp{}day cluster of asteroids.k
+\vs p057 6:5 Shooting stars occur in swarms because they are the fragments of larger bodies of matter which have been disrupted by tidal gravity exerted by near\hyp{}by and still larger space bodies. Saturn’s rings are the fragments of a disrupted satellite. One of the moons of Jupiter\fnst{That is \bibemph{Amalthea,} as the original text (\cite{Jeans1}, p.\,245) specifically says \bibemph{Jupiter's innermost satellite is already perilously near it}. At the time when Sir James Jeans wrote this, the innermost known sattelite was Amalthea. The present ratio of Amalthea's orbital radius to the Roche limit is indeed dangerously close: 1.75. The other close candidates are \bibemph{Metis,} \bibemph{Adrastea} and \bibemph{Thebe,} but they were discovered much later and so could not have been mentioned in the Revelation or its base source text \cite{Jeans1}.} is now approaching dangerously near the critical zone of tidal disruption and, within a few million years, will either be claimed by the planet or will undergo gravity\hyp{}tidal disruption. The fifth planet\fnst{This planet was named \bibemph{Phaeton} by the Soviet astronomer S.V.~Orlov in 1949. The breakup of Phaeton gave origin to the asteroid belt. In 1950 V.G.~Fesenkov explained disintegration of Phaeton by its close encounter with Jupiter. However, this leaves the question why the orbits of the majority of asteroids are so far from Jupiter. Because of this difficulty V.G.~Fesenkov later rejected his own original model. For more information, I refer the reader to the article ``Origin of Asteroids'', by V.A.~Bronshtein (1972) available on \texttt{archive.org} (contributed by NASA).} of the solar system of long, long ago traversed an irregular orbit, periodically making closer and closer approach to Jupiter until it entered the critical zone of gravity\hyp{}tidal disruption, was swiftly fragmentized, and became the present\hyp{}day cluster of asteroids.k
 \vs p057 6:6 \pc \bibemph{4,000,000,000} years ago witnessed the organization of the Jupiter\index{Planets!Jupiter|)} and Saturn systems much as observed today except for their moons, which continued to increase in size for several billions of years. In fact, all of the planets and satellites of the solar system are still growing as the result of continued meteoric captures.
 \vs p057 6:7 \pc \bibemph{3,500,000,000} years ago the condensation nucleuses of the other 10 planets were well formed, and the cores of most of the moons were intact, though some of the smaller satellites later united to make the present\hyp{}day larger moons. This age may be regarded as the era of planetary assembly.
 \vs p057 6:8 \pc \bibemph{3,000,000,000} years ago the solar system was functioning much as it does today. Its members continued to grow in size as space meteors continued to pour in upon the planets and their satellites at a prodigious rate.
