Use the word 'seventh' in 26:5.5 instead of 7th.

--- a/tex/p026.tex
+++ b/tex/p026.tex
@@ -70,7 +70,7 @@
 \vs p026 5:2 These pilgrim helpers, functioning on the seventh circle of Havona worlds, conduct their work for the ascending mortals in three major divisions: first, the supreme understanding of the Paradise Trinity; second, the spiritual comprehension of the Father\hyp{}Son partnership; and third, the intellectual recognition of the Infinite Spirit. Each of these phases of instruction is divided into 7 branches of 12 minor divisions of 70 subsidiary groups; and each of these 70 subsidiary groupings of instruction is presented in 1,000 classifications. More detailed instruction is provided on subsequent circles, but an outline of every Paradise requirement is taught by the pilgrim helpers.
 \vs p026 5:3 That, then, is the primary or elementary course which confronts the faith\hyp{}tested and much\hyp{}travelled pilgrims of space. But long before reaching Havona, these ascendant children of time have learned to feast upon uncertainty, to fatten upon disappointment, to enthuse over apparent defeat, to invigorate in the presence of difficulties, to exhibit indomitable courage in the face of immensity, and to exercise unconquerable faith when confronted with the challenge of the inexplicable. Long since, the battle cry of these pilgrims became: “In liaison with God, nothing --- absolutely nothing --- is impossible.”
 \vs p026 5:4 There is a definite requirement of the pilgrims of time on each of the Havona circles; and while every pilgrim continues under the tutelage of supernaphim by nature adapted to helping that particular type of ascendant creature, the course that must be mastered is fairly uniform for all ascenders who reach the central universe. This course of achievement is quantitative, qualitative, and experiential --- intellectual, spiritual, and supreme.
-\vs p026 5:5 Time is of little consequence on the Havona circles. In a limited manner it enters into the possibilities of advancement, but achievement is the final and supreme test. The very moment your superaphic associate deems you to be competent to pass inward to the next circle, you will be taken before the 12 adjutants of the 7\ts{th} Circuit Spirit. Here you will be required to pass the tests of the circle determined by the superuniverse of your origin and by the system of your nativity. The divinity attainment of this circle takes place on the pilot world and consists in the spiritual recognition and realization of the Master Spirit of the ascending pilgrim’s superuniverse.
+\vs p026 5:5 Time is of little consequence on the Havona circles. In a limited manner it enters into the possibilities of advancement, but achievement is the final and supreme test. The very moment your superaphic associate deems you to be competent to pass inward to the next circle, you will be taken before the 12 adjutants of the seventh Circuit Spirit. Here you will be required to pass the tests of the circle determined by the superuniverse of your origin and by the system of your nativity. The divinity attainment of this circle takes place on the pilot world and consists in the spiritual recognition and realization of the Master Spirit of the ascending pilgrim’s superuniverse.
 \vs p026 5:6 When the work of the outer Havona circle is finished and the course presented is mastered, the pilgrim helpers take their subjects to the pilot world of the next circle and commit them to the care of the supremacy guides. The pilgrim helpers always tarry for a season to assist in making the transfer both pleasant and profitable.
 \usection{The Supremacy Guides}
 \vs p026 6:1 Ascenders of space are designated “spiritual graduates” when translated from the seventh to the sixth circle and are placed under the immediate supervision of the supremacy guides. These guides should not be confused with the Graduate Guides --- belonging to the Higher Personalities of the Infinite Spirit --- who, with their servital associates, minister on all circuits of Havona to both ascending and descending pilgrims. The supremacy guides function only on the sixth circle of the central universe.
