Use the words "ten billion" in 29:0.10

--- a/tex/p029.tex
+++ b/tex/p029.tex
@@ -14,7 +14,7 @@
 \vs p029 0:7 \ublistelem{2.}\bibnobreakspace The Supreme Power Centres.
 \vs p029 0:8 \ublistelem{3.}\bibnobreakspace The Master Physical Controllers.
 \vs p029 0:9 \ublistelem{4.}\bibnobreakspace The Morontia Power Supervisors.
-\vs p029 0:10 \pc The Supreme Power Directors and Centres have existed from the near times of eternity, and as far as we know, no more beings of these orders have been created. The Seven Supreme Directors were personalized by the Seven Master Spirits, and then they collaborated with their parents in the production of more than $10^{10}$ associates. Before the days of the power directors the energy circuits of space outside of the central universe were under the intelligent supervision of the Master Force Organizers of Paradise.
+\vs p029 0:10 \pc The Supreme Power Directors and Centres have existed from the near times of eternity, and as far as we know, no more beings of these orders have been created. The Seven Supreme Directors were personalized by the Seven Master Spirits, and then they collaborated with their parents in the production of more than ten billion associates. Before the days of the power directors the energy circuits of space outside of the central universe were under the intelligent supervision of the Master Force Organizers of Paradise.
 \vs p029 0:11 Having knowledge about material creatures, you have at least a contrastive conception of spiritual beings; but it is very difficult for the mortal mind to envisage the power directors. In the scheme of ascendant progression to higher levels of existence you have nothing directly to do with either the supreme directors or the power centres. On certain rare occasions you will have dealings with the physical controllers, and you will work freely with the supervisors of morontia power upon reaching the mansion worlds. These Morontia Power Supervisors function so exclusively in the morontia regime of the local creations that it is deemed best to narrate their activities in the section dealing with the local universe.
 \usection{The Seven Supreme Power Directors}
 \vs p029 1:1 The Seven Supreme Power Directors are the physical\hyp{}energy regulators of the grand universe. Their creation by the Seven Master Spirits is the first recorded instance of the derivation of semimaterial progeny from true spirit ancestry. When the Seven Master Spirits create individually, they bring forth highly spiritual personalities on the angelic order; when they create collectively, they sometimes produce these high types of semimaterial beings. But even these quasi\hyp{}physical beings would be invisible to the short\hyp{}range vision of Urantia mortals.
