Use the word "ten" in 29:2.17

--- a/tex/p029.tex
+++ b/tex/p029.tex
@@ -38,7 +38,7 @@
 \vs p029 2:14 All energy is circuited in the Paradise cycle, but the Universe Power Directors \bibemph{direct} the force\hyp{}energies of nether Paradise as they find them modified in the space functions of the central and superuniverses, converting and directing these energies into channels of useful and constructive application. There is a difference between Havona energy and the energies of the superuniverses. The power charge of a superuniverse consists of 3 phases of energy of 10 segregations each. This threefold energy charge spreads throughout the space of the grand universe; it is like a vast moving ocean of energy which engulfs and bathes the whole of each of the seven supercreations.
 \vs p029 2:15 The electronic organization of universe power functions in seven phases and discloses varying response to local or linear gravity. This sevenfold circuit proceeds from the superuniverse power centres and pervades each supercreation. Such specialized currents of time and space are definite and localized energy movements initiated and directed for specific purposes, much as the Gulf Stream functions as a circumscribed phenomenon in the midst of the Atlantic Ocean.
 \vs p029 2:16 \ublistelem{4.}\bibnobreakspace \bibemph{Local Universe Centres.} On the headquarters of each local universe are stationed 100 power centres of the 4\ts{th} order. They function to downstep and otherwise to modify the seven power circuits emanating from superuniverse headquarters, thus making them applicable to the services of the constellations and systems. The local astronomical catastrophes of space are of passing concern to these power centres; they are engaged in the orderly dispatch of effective energy to the subsidiary constellations and systems. They are of great assistance to the Creator Sons during the later times of universe organization and energy mobilization. These centres are able to provide intensified lanes of energy useful for interplanetary communication between important inhabited points. Such a \bibemph{lane} or \bibemph{line} of energy, sometimes also called an energy path, is a direct circuit of energy from one power centre to another power centre or from one physical controller to another controller. It is an individualized stream of power and stands in contrast to the free space movements of undifferentiated energy.
-\vs p029 2:17 \ublistelem{5.}\bibnobreakspace \bibemph{Constellation Centres.} 10 of these living power centres are stationed in each constellation, functioning as energy projectors to the 100 tributary local systems. From these beings there go forth the power lines for communication and transport and for the energizing of those living creatures who are dependent upon certain forms of physical energy for the maintenance of life. But neither the power centres nor the subordinate physical controllers are otherwise concerned with life as a functional organization.
+\vs p029 2:17 \ublistelem{5.}\bibnobreakspace \bibemph{Constellation Centres.} Ten of these living power centres are stationed in each constellation, functioning as energy projectors to the 100 tributary local systems. From these beings there go forth the power lines for communication and transport and for the energizing of those living creatures who are dependent upon certain forms of physical energy for the maintenance of life. But neither the power centres nor the subordinate physical controllers are otherwise concerned with life as a functional organization.
 \vs p029 2:18 \ublistelem{6.}\bibnobreakspace \bibemph{System Centres.} One Supreme Power Centre is permanently assigned to each local system. These system centres dispatch the power circuits to the inhabited worlds of time and space. They co\hyp{}ordinate the activities of the subordinate physical controllers and otherwise function to ensure the satisfactory distribution of power in the local system. The circuit relay between the planets depends upon the perfect co\hyp{}ordination of certain material energies and upon the efficient regulation of physical power.
 \vs p029 2:19 \ublistelem{7.}\bibnobreakspace \bibemph{Unclassified Centres.} These are the centres who function in special local situations but not on the inhabited planets. The individual worlds are in the charge of Master Physical Controllers and receive the encircuited lines of power dispatched by the power centre of their system. Only those spheres of the most extraordinary energy relationships have power centres of the 7\ts{th} order acting as universe balance wheels or energy governors. In every phase of activity these power centres are the full equals of those who function on the higher units of control, but not 1 space body in 1,000,000 harbours such a living power organization.
 \usection{The Domain of Power Centres}
