Small correction to the number rendering

--- a/tex/p029.tex
+++ b/tex/p029.tex
@@ -70,7 +70,7 @@
 \vs p029 4:13 Personality is not necessarily a concomitant of mind. Mind can think even when deprived of all power of choice, as in numerous of the lower types of animals and in certain of these subordinate physical controllers. Many of these more automatic regulators of physical power are not persons in any sense of the term. They are not endowed with will and independence of decision, being wholly subservient to the mechanical perfection of design for the tasks of their allotment. Nonetheless all of them are highly intelligent beings.
 \vs p029 4:14 The physical controllers are chiefly occupied in the adjustment of basic energies undiscovered on Urantia. These unknown energies are very essential to the interplanetary system of transport and to certain techniques of communication. When we lay lines of energy for the purpose of conveying sound equivalents or of extending vision, these undiscovered forms of energy are utilized by the living physical controllers and their associates. These same energies are also, on occasion, used by the midway creatures in their routine work.
 \vs p029 4:15 \ublistelem{1.}\bibnobreakspace \bibemph{Associate Power Directors.} These marvellously efficient beings are entrusted with the assignment and dispatch of all orders of the Master Physical Controllers in accordance with the ever\hyp{}shifting needs of the constantly changing energy status of the realms. The vast reserves of the physical controllers are maintained on the headquarters worlds of the minor sectors, and from these concentration points they are periodically dispatched by the associate power directors to the headquarters of the universes, constellations, and systems, and to the individual planets. When thus assigned, the physical controllers are provisionally subject to the orders of the divine executioners of the conciliating commissions but are otherwise solely amenable to their associate directors and to the Supreme Power Centres.
-\vs p029 4:16 3,000,000 associate power directors are assigned to each of the Orvonton minor sectors, making a total of $3 \times 10^9$ as the superuniverse quota of these amazingly versatile beings. Their own reserves are maintained on these same minor sector worlds, where they also serve as instructors of all who study the sciences of the techniques of intelligent energy control and transmutation.
+\vs p029 4:16 3,000,000 associate power directors are assigned to each of the Orvonton minor sectors, making a total of 3,000,000,000 as the superuniverse quota of these amazingly versatile beings. Their own reserves are maintained on these same minor sector worlds, where they also serve as instructors of all who study the sciences of the techniques of intelligent energy control and transmutation.
 \vs p029 4:17 These directors alternate periods of executive service in the minor sectors with equal periods of inspection service to the realms of space. At least one acting inspector is always present in each local system, maintaining headquarters on its capital sphere. They keep the whole vast living energy aggregation in harmonious synchrony.
 \vs p029 4:18 \ublistelem{2.}\bibnobreakspace \bibemph{Mechanical Controllers.} These are the exceedingly versatile and mobile assistants of the associate power directors. Trillions upon trillions of them are commissioned in Ensa, your minor sector. These beings are called mechanical controllers because they are so completely dominated by their superiors, so fully subservient to the will of the associate power directors. Nevertheless they are, themselves, very intelligent, and their work, though mechanical and matter\hyp{}of\hyp{}fact in nature, is skillfully performed.
 \vs p029 4:19 Of all the Master Physical Controllers assigned to the inhabited worlds, the mechanical controllers are by far the most powerful. Possessing the living endowment of antigravity in excess of all other beings, each controller has a gravity resistance equalled only by enormous spheres revolving at tremendous velocity. 10 of these controllers are now stationed on Urantia, and one of their most important planetary activities is to facilitate the departure of seraphic transports. In so functioning, all 10 of the mechanical controllers act in unison while a battery of 1,000 energy transmitters provides the initial momentum for the seraphic departure.
