Shorten the footnote and update the text importer

--- a/tex/p014.tex
+++ b/tex/p014.tex
@@ -17,7 +17,7 @@
 \vs p014 1:6 \ublistelem{5.}\bibnobreakspace The second unique space zone dividing the two space paths of the dark gravity bodies.
 \vs p014 1:7 \ublistelem{6.}\bibnobreakspace The outer belt of dark gravity bodies, revolving clockwise around Paradise.
 \vs p014 1:8 \ublistelem{7.}\bibnobreakspace A third space zone --- a semiquiet zone --- separating the outer belt of dark gravity bodies from the innermost circuits of the seven superuniverses.
-\vs p014 1:9 \pc The billion worlds of Havona are arranged in seven concentric circuits immediately surrounding the three circuits of Paradise satellites. There are upwards of 35,000,000 worlds in the innermost Havona circuit and over 245,000,000 in the outermost, with proportionate numbers intervening\fnst{The number of the worlds (in millions) on the $k$-th circuit is given by the following approximate formula: $x_k = 35k$. Indeed, it follows from the text that $x_1=35$ and $x_7 = 245$ and also $\sum\limits_{k=1}^{7}x_k = 980 \approx 1000$.}. Each circuit differs, but all are perfectly balanced and exquisitely organized, and each is pervaded by a specialized representation of the Infinite Spirit, one of the Seven Spirits of the Circuits. In addition to other functions this impersonal Spirit co\hyp{}ordinates the conduct of celestial affairs throughout each circuit.
+\vs p014 1:9 \pc The billion worlds of Havona are arranged in seven concentric circuits immediately surrounding the three circuits of Paradise satellites. There are upwards of 35,000,000 worlds in the innermost Havona circuit and over 245,000,000 in the outermost, with proportionate numbers intervening\fnst{The number of worlds (in millions) on the $k$\ts{th} circuit is $N_k=35k$, since $N_1=35, N_7=245, \sum\limits_{k=1}^7 35k=980\approx1000$.}. Each circuit differs, but all are perfectly balanced and exquisitely organized, and each is pervaded by a specialized representation of the Infinite Spirit, one of the Seven Spirits of the Circuits. In addition to other functions this impersonal Spirit co\hyp{}ordinates the conduct of celestial affairs throughout each circuit.
 \vs p014 1:10 The Havona planetary circuits are not superimposed; their worlds follow each other in an orderly linear procession. The central universe whirls around the stationary Isle of Paradise in one vast plane, consisting of ten concentric stabilized units --- the three circuits of Paradise spheres and the seven circuits of Havona worlds. Physically regarded, the Havona and the Paradise circuits are all one and the same system; their separation is in recognition of functional and administrative segregation.
 \vs p014 1:11 \pc Time is not reckoned on Paradise; the sequence of successive events is inherent in the concept of those who are indigenous to the central Isle. But time is germane to the Havona circuits and to numerous beings of both celestial and terrestrial origin sojourning thereon. Each Havona world has its own local time, determined by its circuit. All worlds in a given circuit have the same length of year since they uniformly swing around Paradise, and the length of these planetary years decreases from the outermost to the innermost circuit.
 \vs p014 1:12 Besides Havona\hyp{}circuit time, there is the Paradise\hyp{}Havona standard day and other time designations which are determined on, and are sent out from, the seven Paradise satellites of the Infinite Spirit. The Paradise\hyp{}Havona standard day is based on the length of time required for the planetary abodes of the first or inner Havona circuit to complete one revolution around the Isle of Paradise; and though their velocity is enormous, owing to their situation between the dark gravity bodies and gigantic Paradise, it requires almost 1,000 years for these spheres to complete their circuit. You have unwittingly read the truth when your eyes rested on the statement “A day is as a thousand years with God, as but a watch in the night.” One Paradise\hyp{}Havona day is just 7 minutes, 3\,\bibfrac{1}{8} seconds less than 1,000 years of the present Urantia leap\hyp{}year calendar.
