--- a/tex/p041.tex
+++ b/tex/p041.tex
@@ -43,14 +43,14 @@
 \usection{Sun Density}
 \vs p041 4:1 The mass of your sun is slightly greater than the estimate of your physicists, who have reckoned it as about $2\times 10^{30}$\,kg\fnst{The present estimate is: $1.98892 \times 10^{30}$ kg.}. It now exists about halfway between the most dense and the most diffuse stars, having about 1.5 times the density of water\fnst{More accurately: $1.408 \times 10^3$\,kg/m\ts{3}.}. But your sun is neither a liquid nor a solid --- it is gaseous --- and this is true notwithstanding the difficulty of explaining how gaseous matter can attain this and even much greater densities.
 \vs p041 4:2 \pc Gaseous, liquid, and solid states are matters of atomic\hyp{}molecular relationships, but density is a relationship of space and mass. Density varies directly with the quantity of mass in space and inversely with the amount of space in mass, the space between the central cores of matter and the particles which whirl around these centres as well as the space within such material particles.
-\vs p041 4:3 \pc Cooling stars can be physically gaseous and tremendously dense at the same time. You are not familiar with the solar \bibemph{supergases,}\fnst{In the original source text \cite{Eddington1} the phrase ``not imperfect, but superperfect'' explains the prefix ``super''.} but these and other unusual forms of matter explain how even nonsolid suns can attain a density equal to iron --- about the same as Urantia --- and yet be in a highly heated gaseous state and continue to function as suns. The atoms in these dense supergases are exceptionally small; they contain few electrons. Such suns have also largely lost their free ultimatonic stores of energy.
+\vs p041 4:3 \pc Cooling stars can be physically gaseous and tremendously dense at the same time. You are not familiar with the solar \bibemph{supergases,}\fnst{In the original source text (``Stars and Atoms'' by A.S.\,Eddington, \cite{Eddington1}) the phrase ``not imperfect, but superperfect'' explains the prefix ``super''.} but these and other unusual forms of matter explain how even nonsolid suns can attain a density equal to iron --- about the same as Urantia --- and yet be in a highly heated gaseous state and continue to function as suns. The atoms in these dense supergases are exceptionally small; they contain few electrons. Such suns have also largely lost their free ultimatonic stores of energy.
 \vs p041 4:4 One of your near\hyp{}by suns, which started life with about the same mass as yours, has now contracted almost to the size of Urantia, having become 40,000\fnst{In 1955 text ``sixty thousand''. Textual consistency and current scientific estimates of our sun’s density both support the change to “40,000.” The first paragraph of this section states that our sun is about 1.5 times the density of water 1 g/cm\ts{3}, and 40,000 times this is 40 kg/cm\ts{3}; the current scientific estimate of the sun’s density is 1.4 times the density of water; 40,000 times that is 56 kg/cm\ts{3}. The likely cause of this error in the 1955 text is that the number in question was written as a numeral in the manuscript (40,000 not forty thousand), and the error was caused by a simple keystroke error in which 6 was mis-keyed for 4, creating 60,000 instead of 40,000. When the text was formatted for printing, the numerals were changed to words, and an error that formerly consisted of one digit was transformed into an incorrect word. The formatting of words and numbers for printing is not a revelatory issue; it is a matter of style, and is covered extensively in the Chicago Manual of Style. (The problem at \bibref[43:1.6]{p043 1:6} in the text appears to have had an identical origin, and \bibref[42:5.1]{p042 5:1} in the text is very closely related.)} times as dense as your sun. The weight of this hot\hyp{}cold gaseous\hyp{}solid is about 61 kg/cm\ts{3}\fnst{Calculating the density we obtain $\rho = 1851.8$\,kg/cm\ts{3}, which differs greatly from the figure 61\,kg/cm\ts{3} given in the text. Therefore, this ``near-by sun'' has lost most of its mass by now.}. And still this sun shines with a faint reddish glow, the senile glimmer of a dying monarch of light.
 \vs p041 4:5 Most of the suns, however, are not so dense. One of your nearer neighbours\fnst{The distance to Capella (α Aurig\ae) is estimated to be about 43 light years.} has a density exactly equal to that of your atmosphere at sea level. If you were in the interior of this sun, you would be unable to discern anything. And temperature permitting, you could penetrate the majority of the suns which twinkle in the night sky and notice no more matter than you perceive in the air of your earthly living rooms.
 \vs p041 4:6 The massive sun of Veluntia, one of the largest in Orvonton, has a density only 0.001 that of Urantia’s atmosphere. Were it in composition similar to your atmosphere and not superheated, it would be such a vacuum that human beings would speedily suffocate if they were in or on it.
 \vs p041 4:7 Another of the Orvonton giants now has a surface temperature a trifle under 3,000\,°C. Its diameter is over 482,803,200\,km --- ample room to accommodate your sun and the present orbit of the earth. And yet, for all this enormous size, over 40,000,000 times\fnst{Here the ``size'' obviously signifies the volume, not the diameter, because the diameter of the Sun is 1,391,400\,km and therefore the ratio of volumes of the two stars is 41,778,652, i.e. approximately 40,000,000.} that of your sun, its mass is only about 30 times greater. These enormous suns have an extending fringe that reaches almost from one to the other.
 \usection{Solar Radiation}
 \vs p041 5:1 That the suns of space are not very dense is proved by the steady streams of escaping light\hyp{}energies. Too great a density would retain light by opacity until the light\hyp{}energy pressure reached the explosion point. There is a tremendous light or gas pressure within a sun to cause it to shoot forth such a stream of energy as to penetrate space for millions upon millions of kilometres to energize, light, and heat the distant planets. 4.6\,m of surface of the density of Urantia would effectually prevent the escape of all X\hyp{}rays and light\hyp{}energies from a sun until the rising internal pressure of accumulating energies resulting from atomic dismemberment overcame gravity with a tremendous outward explosion.
-\vs p041 5:2 Light, in the presence of the propulsive gases, is highly explosive when confined at high temperatures by opaque retaining walls. Light is real. As you value energy and power on your world, sunlight would be economical at a million pounds sterling a kilogram.
+\vs p041 5:2 Light, in the presence of the propulsive gases, is highly explosive when confined at high temperatures by opaque retaining walls. Light is real. As you value energy and power on your world, sunlight would be economical at a million dollars a pound\fnst{On p.~111 of ``Space, Time, and Gravitation'' by A.S.\,Eddington \cite{Eddington2} we read: ``I have calculated that at the low charge of~3\bibemph{d}. a unit, an Electric Light Company would have to sell light at the rate of £140,000,000 a pound. All the sunlight falling on the earth amounts to 160 tons daily.'' Now, at the time the exchange rate was £1 = \$5 and thus the actual price of light in US dollars would be 700 million dollars a pound. So, yes, at 1/700\ts{th} of the price it would be very \bibemph{economical} indeed!}.
 \vs p041 5:3 The interior of your sun is a vast X\hyp{}ray generator. The suns are supported from within by the incessant bombardment of these mighty emanations.
 \vs p041 5:4 It requires more than 500,000 years for an X\hyp{}ray\hyp{}stimulated electron to work its way from the very centre of an average sun up to the solar surface, whence it starts out on its space adventure, maybe to warm an inhabited planet, to be captured by a meteor, to participate in the birth of an atom, to be attracted by a highly charged dark island of space, or to find its space flight terminated by a final plunge into the surface of a sun similar to the one of its origin.
 \vs p041 5:5 The X\hyp{}rays of a sun’s interior charge the highly heated and agitated electrons with sufficient energy to carry them out through space, past the hosts of detaining influences of intervening matter and, in spite of divergent gravity attractions, on to the distant spheres of the remote systems. The great energy of velocity required to escape the gravity clutch of a sun is sufficient to ensure that the sunbeam will travel on with unabated velocity until it encounters considerable masses of matter; whereupon it is quickly transformed into heat with the liberation of other energies.
@@ -106,6 +106,10 @@
 A.S.~Eddington
 {``Stars and Atoms''}
 {\em Oxford: Clarendon Press}, 1927.
+\bibitem{Eddington2}
+A.S.~Eddington
+{``Space, Time,  and Gravitation''}
+{\em Cambridge: University Press}, 1920.
 \bibitem{Jeans1}
 J.~Jeans.
 {``Through Space and Time''}
